--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,7 @@
   animation-play-state: paused;
 }
 
+.no-highlight {
+  -webkit-tap-highlight-color: transparent;
+  touch-action: manipulation;
+}
